# mcp-nordic-ppk2

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: controller_test.rs
src/: controller.rs  lib.rs  main.rs  server.rs
