[package]
name = "mcp-nordic-ppk2"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["OOHehir <40183643+OOHehir@users.noreply.github.com>"]
description = "Model Context Protocol (MCP) server for the Nordic Power Profiler Kit II (PPK2) — measure current and use the digital channels as triggers, from an MCP client."
license = "MIT"
repository = "https://github.com/OOHehir/mcp-nordic-ppk2"
readme = "README.md"
keywords = ["mcp", "ppk2", "nordic", "power-profiler", "current"]
categories = ["command-line-utilities", "science", "embedded"]

# The `serialport` dependency links libudev at build time on Linux. docs.rs
# provides it on its default Linux target (serialport and ppk2 both build there),
# so pin doc builds to that target instead of attempting others where the system
# library may be absent.
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = "1.0.103"
ppk2 = "0.1.3"
rmcp = { version = "2.2.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
# Direct dep (also pulled in transitively by `ppk2`) so we can enumerate ports
# and read each port's USB interface number to pick the PPK2's control interface.
serialport = { version = "4.9.0", features = ["usbportinfo-interface"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
